# fuji

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-docker.yml  python-publish.yml  repodois.yml  reports.yml
coverage/: class_index.html  d_c68eae20cc05bb5d_any_of_fair_results_items_py.html  d_c68eae20cc05bb5d_base_model__py.html  d_c68eae20cc05bb5d_body_py.html  d_c68eae20cc05bb5d_community_endorsed_standard_output_inner_py.html  d_c68eae20cc05bb5d_community_endorsed_standard_output_py.html  d_c68eae20cc05bb5d_community_endorsed_standard_py.html  d_c68eae20cc05bb5d_core_metadata_output_py.html  d_c68eae20cc05bb5d_core_metadata_py.html  d_c68eae20cc05bb5d_data_access_level_py.html  d_c68eae20cc05bb5d_data_access_output_py.html  d_c68eae20cc05bb5d_data_content_metadata_output_inner_py.html  d_c68eae20cc05bb5d_data_content_metadata_output_py.html  d_c68eae20cc05bb5d_data_content_metadata_py.html  d_c68eae20cc05bb5d_data_file_format_output_inner_py.html  d_c68eae20cc05bb5d_data_file_format_output_py.html  d_c68eae20cc05bb5d_data_file_format_py.html  d_c68eae20cc05bb5d_data_provenance_output_inner_py.html  d_c68eae20cc05bb5d_data_provenance_output_py.html  d_c68eae20cc05bb5d_data_provenance_py.html  d_c68eae20cc05bb5d_debug_py.html  d_c68eae20cc05bb5d_fair_result_common_py.html  d_c68eae20cc05bb5d_fair_result_common_score_py.html  d_c68eae20cc05bb5d_fair_result_evaluation_criterium_py.html  d_c68eae20cc05bb5d_fair_result_evaluation_criterium_requirements_py.html  d_c68eae20cc05bb5d_fair_results_py.html  d_c68eae20cc05bb5d_formal_metadata_output_inner_py.html  d_c68eae20cc05bb5d_formal_metadata_output_py.html  d_c68eae20cc05bb5d_formal_metadata_py.html  d_c68eae20cc05bb5d_harvest_results_metadata_py.html  d_c68eae20cc05bb5d_harvest_results_py.html  d_c68eae20cc05bb5d_identifier_included_output_inner_py.html  d_c68eae20cc05bb5d_identifier_included_output_py.html  d_c68eae20cc05bb5d_identifier_included_py.html  d_c68eae20cc05bb5d_license_output_inner_py.html  d_c68eae20cc05bb5d_license_output_py.html  d_c68eae20cc05bb5d_license_py.html  d_c68eae20cc05bb5d_metadata_preserved_output_py.html  d_c68eae20cc05bb5d_metadata_preserved_py.html  d_c68eae20cc05bb5d_metric_py.html  (+228 more)
fuji_server/: __main__.py  app.py  config.py
fuji_server/config/: settings.toml
fuji_server/helper/: preprocessor.py
tests/: conftest.py
tests/config/: test_server.ini
tests/controllers/: test_fair_check.py
tests/controllers/cassettes/test_fair_check/: test_harvest_all_metadata.yaml
tests/data/cassettes/: test_harvest_all_metadata.yaml  test_set_mime_types.yaml
tests/functional/: test_evaluation.py
tests/functional/cassettes/test_evaluation/: test_evaluation.yaml
tests/helper/: test_preprocessor.py
tests/helper/cassettes/test_preprocessor/: test_set_mime_types.yaml
tests/integration/: test_api.py
tests/models/: test_harvest.py
